add EPL talk, reorder service, add AAS 241 abstract

--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -217,6 +217,10 @@ Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
 
+   \item \textbf{Carnegie Institution for Science} $|$
+   Astronomy Seminar Series, 28 October 2022. \\
+  Title:~\textit{Reconstructing asteroid assembly from the thermal records of chondrites}
+
    \item \textbf{Massachusetts Institute of Technology} $|$
    Planetary Lunch Seminar, 3 May 2022. \\
   Title:~\textit{The early history of the LL chondrite parent planetesimal}
@@ -232,6 +236,22 @@ Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.
 %-------------------------------------------
 
 \section*{ACADEMIC SERVICE \& EXPERIENCE}
+
+\subsection*{\textbf{Laboratory Research \& Management}}
+Analytical Experience:
+	\begin{itemize} [label={}]
+		\item \textit{Expert:} TIMS
+		\item \textit{Proficient:} MC-ICP-MS, ICP-MS, SEM-EDS
+		\item \textit{Limited:} ICP-OES, XRF, XRD
+	\end{itemize} \vspace{1ex}	
+ \textit{W.M. Keck Isotope Facility}, UCSC \hfill 2016 -- 2021\\
+Under the advisorship of lab director Prof. Terry Blackburn, I was partially responsible for the operation and maintenance of this multi-user clean lab facility, including:
+	\begin{itemize} 
+	\item Maintenance and operation of mass spectrometers and wet chemistry labs.
+	\item Training and supporting researchers in chemical and mass spectrometric methods.
+	\item Preparation, measurement, and reporting of isotopic analyses of geologic and biomineral material for external contracts.
+	\item Procurement and preparation of lab consumables.
+	\end{itemize}
 
 \subsection*{\textbf{Departmental Service}}
 \subsubsection*{Department of Earth Sciences, Dartmouth}
@@ -253,22 +273,6 @@ Whole Earth Seminar --- Organizer \hfill  Spring 2019
 
 \subsubsection*{AGU Fall Meeting}
 	\par\quad Co-Chair/Co-Convener:~~Applications of Thermochronology to Understand Crustal Systems \hfill 2017
-
-\subsection*{\textbf{Laboratory Research \& Management}}
-Analytical Experience:
-	\begin{itemize} [label={}]
-		\item \textit{Expert:} TIMS
-		\item \textit{Proficient:} MC-ICP-MS, ICP-MS, SEM-EDS
-		\item \textit{Limited:} ICP-OES, XRF, XRD
-	\end{itemize} \vspace{1ex}	
- \textit{W.M. Keck Isotope Facility}, UCSC \hfill 2016 -- 2021\\
-Under the advisorship of lab director Prof. Terry Blackburn, I was partially responsible for the operation and maintenance of this multi-user clean lab facility, including:
-	\begin{itemize} 
-	\item Maintenance and operation of mass spectrometers and wet chemistry labs.
-	\item Training and supporting researchers in chemical and mass spectrometric methods.
-	\item Preparation, measurement, and reporting of isotopic analyses of geologic and biomineral material for external contracts.
-	\item Procurement and preparation of lab consumables.
-	\end{itemize}
 
 \vspace{2ex}
 \begin{hangparas}{5ex}{1}
@@ -324,8 +328,9 @@ Under the advisorship of lab director Prof. Terry Blackburn, I was partially res
 \begin{center} A more comprehensive list of abstracts is available on \href{https://scholar.google.com/citations?user=KHLOvgcAAAAJ&hl=en}{Google Scholar}. \end{center}
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
- \item \ghedwards, C.B. Keller, C. Stewart, E.R. Newton, 2022. A Bayesian framework for exploring the early impact history of the asteroid belt with meteorite thermochronology. \textit{85\textsuperscript{th} Annual Meeting of the Meteoritical Society}, Glasgow, Scotland. 
-  \item \ghedwards, G. Piccione, M. Gomez, 2022. Comparing in-person and virtual modes of a 4-year museum-based geoscience outreach program. \textit{Earth Educators' Rendezvous 2022}, Minneapolis, MN, U.S.A.
+\item \ghedwards, C.B. Keller, C. Stewart, E.R. Newton. 2023. Constraining the timescales of giant planet migration from the meteorite record. \textit{241\textsuperscript{st} American Astronomical Society Meeting}, Seattle, WA, U.S.A.
+ \item \ghedwards, C.B. Keller, C. Stewart, E.R. Newton. 2022. A Bayesian framework for exploring the early impact history of the asteroid belt with meteorite thermochronology. \textit{85\textsuperscript{th} Annual Meeting of the Meteoritical Society}, Glasgow, Scotland. 
+  \item \ghedwards, G. Piccione, M. Gomez. 2022. Comparing in-person and virtual modes of a 4-year museum-based geoscience outreach program. \textit{Earth Educators' Rendezvous 2022}, Minneapolis, MN, U.S.A.
   \item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk, G.H. Miller, C. Sikes. 2020. [Talk]: Baffin Island subglacial precipitates record subglacial melting beneath the northern Laurentide Ice Sheet concurrent with Heinrich events. \textit{American Geophysical Union Fall Meeting}, New Orleans, LA, U.S.A.
   \item C.T. Varah-Sikes, \ghedwards, T. Blackburn. 2020. [Poster]: Thermal histories in Type 7 ordinary chondrites: interpreting residence in parent body using petrologic observation and Pb-Pb phosphate thermochronology. \textit{Geological Society of America Annual Scientific Meeting}, Virtual.
   \item \ghedwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-series isotopics of silts from Taylor Valley, Antarctica: Applying comminution dating methods on polar desert tills and implications for the timeframe of valley incision. \textit{American Geophysical Union Fall Meeting}, San Francisco, CA, U.S.A.
