GEODES abbreviation and abstract edits

--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -182,10 +182,10 @@ Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.
 	\item Teach geoscience concepts and share stories about experiences as a scientist.
 \end{itemize}
 
-\subsection*{\textbf{Geoscientists Encouraging Openness and Diversity in the Earth Sciences} \hfill 2019 – 2020}
+\subsection*{\textbf{Geoscientists Encouraging Openness and Diversity in the Earth Sciences\\(GEODES)} \hfill 2019 – 2020}
 \subsubsection*{Graduate Student Leader}
 \begin{itemize}
-	\item (abbreviated \textbf{GEODES}) a student-run group in the UCSC Earth \& Planetary Sciences Department.
+	\item A student-run group in the UCSC Earth \& Planetary Sciences Department.
 	\item One of six graduate student leaders responsible for the operation and development of GEODES.
 	\item Organized and implemented outreach events centered on promoting underrepresented groups in the geosciences and cultivating a culture of inclusivity within the department.
 \end{itemize}
@@ -328,16 +328,26 @@ Whole Earth Seminar --- Organizer \hfill  Spring 2019
 \begin{center} A more comprehensive list of abstracts is available on \href{https://scholar.google.com/citations?user=KHLOvgcAAAAJ&hl=en}{Google Scholar}. \end{center}
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
-\item \ghedwards, C.B. Keller, C. Stewart, E.R. Newton. 2023. Constraining the timescales of giant planet migration from the meteorite record. \textit{241\textsuperscript{st} American Astronomical Society Meeting}, Seattle, WA, U.S.A.
- \item \ghedwards, C.B. Keller, C. Stewart, E.R. Newton. 2022. A Bayesian framework for exploring the early impact history of the asteroid belt with meteorite thermochronology. \textit{85\textsuperscript{th} Annual Meeting of the Meteoritical Society}, Glasgow, Scotland. 
-  \item \ghedwards, G. Piccione, M. Gomez. 2022. Comparing in-person and virtual modes of a 4-year museum-based geoscience outreach program. \textit{Earth Educators' Rendezvous 2022}, Minneapolis, MN, U.S.A.
+\item \ghedwards, C.B. Keller,  E.R. Newton, C. Stewart. 2023. [iPoster]: Constraining the timescales of giant planet migration from the meteorite record. \textit{241\textsuperscript{st} American Astronomical Society Meeting}, Seattle, WA, U.S.A.
+
+ \item \ghedwards, C.B. Keller, C. Stewart, E.R. Newton. 2022. [Poster]: A Bayesian framework for exploring the early impact history of the asteroid belt with meteorite thermochronology. \textit{85\textsuperscript{th} Annual Meeting of the Meteoritical Society}, Glasgow, Scotland. 
+ 
+  \item \ghedwards, G. Piccione, M. Gomez. 2022. [Poster]: Comparing in-person and virtual modes of a 4-year museum-based geoscience outreach program. \textit{Earth Educators' Rendezvous 2022}, Minneapolis, MN, U.S.A.
+  
   \item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk, G.H. Miller, C. Sikes. 2020. [Talk]: Baffin Island subglacial precipitates record subglacial melting beneath the northern Laurentide Ice Sheet concurrent with Heinrich events. \textit{American Geophysical Union Fall Meeting}, New Orleans, LA, U.S.A.
+  
   \item C.T. Varah-Sikes, \ghedwards, T. Blackburn. 2020. [Poster]: Thermal histories in Type 7 ordinary chondrites: interpreting residence in parent body using petrologic observation and Pb-Pb phosphate thermochronology. \textit{Geological Society of America Annual Scientific Meeting}, Virtual.
+  
   \item \ghedwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-series isotopics of silts from Taylor Valley, Antarctica: Applying comminution dating methods on polar desert tills and implications for the timeframe of valley incision. \textit{American Geophysical Union Fall Meeting}, San Francisco, CA, U.S.A.
+  
   \item  \ghedwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-Series isotopics constrain timescale of bedrock comminution and glacial incision in Taylor Valley, Antarctica. \textit{Goldschmidt Annual Meeting}, Barcelona, ES.
+  
 	\item  \ghedwards, T. Blackburn, G.G. Piccione. 2018. [Talk]: Cooling and disruption of the LL chondrite parent body. \textit{Lunar and Small Bodies Graduate Forum (LunGradCon)}, Mountain View, CA, U.S.A.
+	
   \item  \ghedwards, T. Blackburn, C.M.O’D. Alexander. 2017. [Talk]: Accretion and disruption histories of the ordinary chondrite parent bodies. \textit{Meteoritical Society Annual Meeting}, Santa Fe, NM, U.S.A.
+  
   \item \ghedwards, T. Blackburn, K.V. Smit. 2017. [Poster]: Timescales of crustal cooling of the Superior Craton near Attawapiskat, Ontario, Canada, and implications for extent of Keweenawan plume heating. \textit{American Geophysical Union Fall Meeting}, New Orleans, LA, U.S.A.
+  
   \item \ghedwards. 2014. [Poster]: Geochemical and stratigraphic analysis of the Linnévatnet sediment record: a provenance study of Late Holocene cirque glacier activity in Linnédalen, Spitsbergen, Svalbard. \textit{44th International Arctic Workshop}, Boulder, CO, U.S.A.
 \end{etaremune}
 \vspace{-12pt}
