make modular and adjust section spacing

--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -30,6 +30,7 @@
 
 \usepackage{titlesec}
 	\titleformat*{\section}{\centering\bfseries}
+	\titlespacing*{\section}{0ex}{3em}{1em}
 	\titleformat*{\subsection}{\normalsize} %NOT \bfseries for right-aligned timeframes
 	\titlespacing*{\subsection}{0ex}{2ex}{.2ex}
 	\titleformat*{\subsubsection}{\normalsize\itshape}
@@ -90,282 +91,38 @@ Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.
 \textit{Bachelor of Arts}: Earth and Oceanographic Science with Honors, Classics (minor) \\
 \textit{Summa cum Laude}, $\Phi$BK Society
 
-%-------------------------------------------
-%	PUBLICATIONS
-%-------------------------------------------
 
-\section*{PUBLICATIONS}
-\hfill* denotes student author
-\begin{etaremune} [itemsep=4pt, leftmargin=3ex]
-%item \ghedwards \&\ G. Piccione, M. Gomez. (\textit{in prep}). Viewership patterns of a virtual geoscience outreach program. \textit{Journal of Geoscience Education}.
-%\item \ghedwards, C.B. Keller, C. Stewart*, (\textit{in prep}). The early bombardment history of the asteroid belt constrained from meteorite thermochronology.
-%\item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk. (\textit{in prep}). Uranium-series isotopes as tracers of physical and chemical weathering in glacial sediments from Taylor Valley, Antarctica. \textit{Chemical Geology}.
-\item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk, G.H. Miller, C. Sikes*. 2022. Terrestrial evidence for ocean forcing of Heinrich events and subglacial hydrologic connectivity of the Laurentide Ice Sheet. \textit{Science Advances}. \href{https://www.science.org/doi/10.1126/sciadv.abp9329}{doi:~10.1126/sciadv.abp9329}.
-\item T. Blackburn, \ghedwards, S. Tulaczyk, M. Scudder*, G. Piccione, B. Hallet, J.C. Zachos, B. Cheney, N. McLean, J.T. Babbe. 2020. Ice retreat in Wilkes Basin of East Antarctica during a warm interglacial. \textit{Nature} (583), 554-559. \href{https://doi.org/10.1038/s41586-020-2484-5}{doi:~10.1038/s41586-020-2484-5}. \textbf{Press:} \href{https://www.nationalgeographic.com/science/2020/07/east-antarctic-ice-sheet-more-vulnerable-to-melting-than-thought/}{National Geographic}.
-\item \ghedwards, T. Blackburn. 2020. Accretion of a large LL parent planetesimal from a recently formed chondrule population. \textit{Science Advances} (6), eaay8641. \href{https://advances.sciencemag.org/content/6/16/eaay8641}{doi:~10.1126/sciadv.aay8641}
-\item \ghedwards, T. Blackburn. 2018. Detecting the extent of ca. 1.1 Ga Midcontinent Rift plume heating using U-Pb thermochronology of the lower crust. \textit{Geology} (46), 911–914. \href{https://doi.org/10.1130/G45150.1}{doi:~10.1130/G45150.1} 
-\item \ghedwards. 2014. Geochemical and stratigraphic analysis of the Linnévatnet sediment record: a study of Late Holocene cirque glacier activity in Spitsbergen, Svalbard. [\textit{Honor’s Thesis}] Bowdoin College: Brunswick, ME, U.S.A. 73 pp. \href{https://digitalcommons.bowdoin.edu/honorsprojects/12/}{[Undergraduate Research Commons]}
-\end{etaremune}
+% PUBLICATIONS
+\input{sect/pubs.tex}
+\vspace*{2em}
 
-\vspace{2em}
-%-------------------------------------------
-%	TEACHING
-%-------------------------------------------
+% TEACHING
+\input{sect/teaching.tex}
 
-\section*{TEACHING \&\ MENTORING}
-\subsection*{\textbf{Dartmouth College}}
-\subsubsection*{Mentored Undergraduate Researchers}
-\begin{itemize}
-	\item Cameron Stewart (2022)
-\end{itemize}
+% OUTREACH
+\input{sect/outreach.tex}
 
-\subsection*{\textbf{University of California Santa Cruz}}
-\subsubsection*{Graduate Teaching Assistant}
-\begin{tabbing} \hspace{10pt} \= \hspace{2.5cm} \=  \kill
-\> Spring 2021 \> \textit{Measuring Earth’s 4.5 Billion-Year History} (radiogenic and stable isotope geochemistry)\\
-\> Fall 2020 \> \textit{Evolution of Earth} (Earth history overview) \\
-\> Fall 2019 \> \textit{Elements of Field Geology}\\
-\> Spring 2018 \>  \textit{Geochemistry of the Solar System}\\
-\> Winter 2018 \> \textit{Geologic Principles} (introductory Earth science)
-\end{tabbing}
+% INVITED TALKS
+\input{sect/talks.tex}
 
-\subsubsection*{Mentored Undergraduate Researchers}
-\begin{itemize}
-	\item Cosmo Varah-Sikes (2019-2021), thesis (2021)
-	\item Linh Phan (2020)
-	\item Michael Scudder (2018-2020), thesis (2020)
-	\item Alexander Levinson (2018)
-	\item Frances O'Byrne (2018)
-	\item Paul Colosi (2017-2018)
-\end{itemize}
+% ACADEMIC SERVICES, EXPERIENCES
+\input{sect/service.tex}
 
-\subsection*{\textbf{Bowdoin College} \hspace{15pt} Brunswick, ME, U.S.A. \hfill 2012 – 2013}
-\subsubsection*{Laboratory Teaching Assistant}
-\begin{tabbing} \hspace{10pt} \= \hspace{2.5cm} \=  \kill
-\> Fall 2012, 2013 \> \textit{Investigating Earth}\\
-\> Fall 2013 \> \textit{Marine Biogeochemistry}
-\end{tabbing}
+% FUNDING
+\input{sect/funding.tex}
 
-\subsection*{\textbf{Bozeman \& Livingston Public Schools} \hspace{15pt} MT, U.S.A. \hfill 2015}
-\textit{Substitute Teacher}
-\begin{itemize}
-	\item Instructor and paraprofessional in K-12 classrooms.
-	\item Taught students with various educational needs in diverse subjects.
-\end{itemize}
+% AWARDS & HONORS
+\input{sect/awards.tex}
 
-%-------------------------------------------
-%	OUTREACH SECTION
-%-------------------------------------------
+% CONFERENCE TALK/POSTER
+\input{sect/abstracts.tex}
 
-\section*{OUTREACH \& PUBLIC SERVICE}
-
-\subsection*{\textbf{Montshire Museum of Science} \hfill 2022}
-\subsubsection*{Guest Scientist}
-\begin{itemize}
-\item Lead and assist in educational activities within the museum.
-\item Explain Earth and space science concepts to pre-K through adult audiences.
-\item Develop programming focused on planetary science topics.
-\end{itemize}
-
-\subsection*{\textbf{Santa Cruz Museum of Natural History} \hfill 2018 – 2022}
-\subsubsection*{Volunteer Scientist}
-\begin{itemize}
-	\item Created educational content and hosted activities at monthly museum events.
-	\item Co-hosted monthly educational video streams covering geoscience topics. \\
-	Link: \href{https://www.santacruzmuseum.org/category/rockin-pop-up/}{\emph{Rockin' Pop-Up} Archives}.
-\end{itemize}
-
-\subsection*{\textbf{Skype a Scientist} \hfill 2019 – Present}
-\subsubsection*{Volunteer Scientist}
-\begin{itemize}
-	\item Prepare educational content and host video calls with elementary and secondary school classrooms.
-	\item Teach geoscience concepts and share stories about experiences as a scientist.
-\end{itemize}
-
-\subsection*{\textbf{Geoscientists Encouraging Openness and Diversity in the Earth Sciences\\(GEODES)} \hfill 2019 – 2020}
-\subsubsection*{Graduate Student Leader}
-\begin{itemize}
-	\item A student-run group in the UCSC Earth \& Planetary Sciences Department.
-	\item One of six graduate student leaders responsible for the operation and development of GEODES.
-	\item Organized and implemented outreach events centered on promoting underrepresented groups in the geosciences and cultivating a culture of inclusivity within the department.
-\end{itemize}
-
-\subsection*{\textbf{Peary-MacMillan Arctic Museum} \hspace{15pt} Brunswick, ME, U.S.A. \hfill 2012 – 2016}
-\textit{Curatorial Intern}~~(2015 – 2016)
-\begin{itemize}
-	\item Developed outreach programming and exhibit content.
-	\item Supplemented undergraduate courses with lectures and discussions drawing on museum collections.
-	\item Mentored and trained undergraduate student interns and employees.
-\end{itemize}
-
-\textit{Student Tour Guide}~~(2012 – 2014)
-\begin{itemize}
-	\item Led hour-long museum tours for all age groups of museum exhibits and interactive collections.
-\end{itemize}
-
-\subsection*{\textbf{Museum of the Rockies} \hspace{15pt} Bozeman, MT, U.S.A. \hfill 2015}
-\textit{Security Volunteer}
-\begin{itemize}
-	\item Answered visitors' questions and facilitated interpretive discussions about natural history exhibits.
-\end{itemize}
-
-%-------------------------------------------
-%	INVITED TALKS
-%-------------------------------------------
-
-\section*{INVITED TALKS}
-
-\begin{etaremune} [itemsep=4pt, leftmargin=3ex]
-
-   \item \textbf{Carnegie Institution for Science} $|$
-   Astronomy Seminar Series, 28 October 2022. \\
-  Title:~\textit{Reconstructing asteroid assembly from the thermal records of chondrites}
-
-   \item \textbf{Massachusetts Institute of Technology} $|$
-   Planetary Lunch Seminar, 3 May 2022. \\
-  Title:~\textit{The early history of the LL chondrite parent planetesimal}
-
-  \item \textbf{Princeton University} $|$ 
-  Environmental Geology and Geochemistry Seminar, 31 March 2022. \\
-  Title:~\textit{Peering beneath the northern Laurentide ice sheet during the last glacial maximum}
-  
-\end{etaremune}
-\vspace{-12pt}
-%-------------------------------------------
-%	ACADEMIC SERVICES, EXPERIENCES
-%-------------------------------------------
-
-\section*{ACADEMIC SERVICE \& EXPERIENCE}
-
-\subsection*{\textbf{Laboratory Research \& Management}}
-Analytical Experience:
-	\begin{itemize} [label={}]
-		\item \textit{Expert:} TIMS
-		\item \textit{Proficient:} MC-ICP-MS, ICP-MS, SEM-EDS
-		\item \textit{Limited:} ICP-OES, XRF, XRD
-	\end{itemize} \vspace{1ex}	
- \textit{W.M. Keck Isotope Facility}, UCSC \hfill 2016 -- 2021\\
-Under the advisorship of lab director Prof. Terry Blackburn, I was partially responsible for the operation and maintenance of this multi-user clean lab facility, including:
-	\begin{itemize} 
-	\item Maintenance and operation of mass spectrometers and wet chemistry labs.
-	\item Training and supporting researchers in chemical and mass spectrometric methods.
-	\item Preparation, measurement, and reporting of isotopic analyses of geologic and biomineral material for external contracts.
-	\item Procurement and preparation of lab consumables.
-	\end{itemize}
-
-\subsection*{\textbf{Departmental Service}}
-\subsubsection*{Department of Earth Sciences, Dartmouth}
-Earth \& Planetary History Journal Club --- Organizer 	 \hfill	Spring 2022
-\begin{itemize}
-	\item Scheduled, coordinated, and oversaw multidisciplinary reading group.
-\end{itemize}
-
-\subsubsection*{Department of Earth \& Planetary Sciences, UCSC}
-Whole Earth Seminar --- Organizer \hfill  Spring 2019
-\begin{itemize}
-	\item Coordinated departmental seminar series (one of two graduate student organizers)
-	\item Contacted and scheduled speakers from diverse disciplines in Earth and planetary sciences.
-\end{itemize}
-
-\subsection*{\textbf{Academic Meetings}}
-\subsubsection*{Meteoritical Society Annual Meeting} 
-	\par\quad McKay Award Judge (best student oral presentation) \hfill 2022
-
-\subsubsection*{AGU Fall Meeting}
-	\par\quad Co-Chair/Co-Convener:~~Applications of Thermochronology to Understand Crustal Systems \hfill 2017
-
-\vspace{2ex}
-\begin{hangparas}{5ex}{1}
-	\textbf{Reviewer for:} \textit{Geochronology}, \textit{Geology}
-
-	\vspace{2ex}
-	\textbf{Society Affiliations:} Meteoritical Society, American Astronomical Society, Geochemical Society, National Association of Geoscience Teachers, Geological Society of America, American Geophysical Union.
-\end{hangparas}
-
-%-------------------------------------------
-%	FUNDING
-%-------------------------------------------
-
-\section*{FUNDING}
-\subsection*{\textbf{Current~/~Active}}
-\begin{itemize}[leftmargin=0pt,label={},itemsep=1ex]
-\item National Science Foundation --- Astronomy \&\ Astrophysics Postdoctoral Fellowship \hfill 2021 -- 2024 \\
-\href{https://www.nsf.gov/awardsearch/showAward?AWD_ID=2102591&HistoricalAwards=false}{Award \#2102591}
-\end{itemize}
-
-\subsection*{\textbf{Prior~/~Inactive}}
-%\begin{tabbing} \hspace{40ex} \= \hspace{25ex} \= \` \hspace{25ex}    \kill \hspace{25ex} 
-\begin{itemize} [leftmargin=0pt,label={},itemsep=1ex]
-\item ARCS Foundation --- Scholar Award (Fellowship) \hfill 2020 -- 2021
-\item University of California Santa Cruz  --- Regent’s Fellowship \hfill 2016 – 2017
-\item Bowdoin College --- Grua/O’Connell Research Award  \hfill 2013
-\item Bowdoin College --- Freedman Summer Research Fellowship in Coastal/Environmental Studies \hfill 2012
-\end{itemize}
-
-%-------------------------------------------
-%	AWARDS & HONORS
-%-------------------------------------------
-
-\section*{AWARDS \& HONORS}
-
-\begin{itemize} [leftmargin=0pt,label={},itemsep=1ex]
-	\item UCSC Earth \& Planetary Sciences Outstanding TA Award (Honorable Mention) \hfill 2020
-	\item Aaron and Elizabeth Waters Award  \hfill 2019
-	\begin{itemize} [label={}, rightmargin=30ex]
-	\item \textit{Issued annually for the most outstanding proposal for PhD research in the UCSC Department of Earth \& Planetary Sciences}
-	\end{itemize}
-	\item National Association of Geoscience Teachers Outstanding TA Award \hfill 2014
-%	\item Sarah and James Bowdoin Scholar (Dean’s List) \hfill 2011 – 2013
-\end{itemize}
-
-
-%-------------------------------------------
-%	CONFERENCE TALK/POSTER
-%-------------------------------------------
-
-\section*{SELECTED CONFERENCE ABSTRACTS}
-
-\begin{center} A more comprehensive list of abstracts is available on \href{https://scholar.google.com/citations?user=KHLOvgcAAAAJ&hl=en}{Google Scholar}. \end{center}
-
-\begin{etaremune} [itemsep=4pt, leftmargin=3ex]
-\item \ghedwards, C.B. Keller,  E.R. Newton, C. Stewart. 2023. [iPoster]: Constraining the timescales of giant planet migration from the meteorite record. \textit{241\textsuperscript{st} American Astronomical Society Meeting}, Seattle, WA, U.S.A.
-
- \item \ghedwards, C.B. Keller, C. Stewart, E.R. Newton. 2022. [Poster]: A Bayesian framework for exploring the early impact history of the asteroid belt with meteorite thermochronology. \textit{85\textsuperscript{th} Annual Meeting of the Meteoritical Society}, Glasgow, Scotland. 
- 
-  \item \ghedwards, G. Piccione, M. Gomez. 2022. [Poster]: Comparing in-person and virtual modes of a 4-year museum-based geoscience outreach program. \textit{Earth Educators' Rendezvous 2022}, Minneapolis, MN, U.S.A.
-  
-  \item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk, G.H. Miller, C. Sikes. 2020. [Talk]: Baffin Island subglacial precipitates record subglacial melting beneath the northern Laurentide Ice Sheet concurrent with Heinrich events. \textit{American Geophysical Union Fall Meeting}, New Orleans, LA, U.S.A.
-  
-  \item C.T. Varah-Sikes, \ghedwards, T. Blackburn. 2020. [Poster]: Thermal histories in Type 7 ordinary chondrites: interpreting residence in parent body using petrologic observation and Pb-Pb phosphate thermochronology. \textit{Geological Society of America Annual Scientific Meeting}, Virtual.
-  
-  \item \ghedwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-series isotopics of silts from Taylor Valley, Antarctica: Applying comminution dating methods on polar desert tills and implications for the timeframe of valley incision. \textit{American Geophysical Union Fall Meeting}, San Francisco, CA, U.S.A.
-  
-  \item  \ghedwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-Series isotopics constrain timescale of bedrock comminution and glacial incision in Taylor Valley, Antarctica. \textit{Goldschmidt Annual Meeting}, Barcelona, ES.
-  
-	\item  \ghedwards, T. Blackburn, G.G. Piccione. 2018. [Talk]: Cooling and disruption of the LL chondrite parent body. \textit{Lunar and Small Bodies Graduate Forum (LunGradCon)}, Mountain View, CA, U.S.A.
-	
-  \item  \ghedwards, T. Blackburn, C.M.O’D. Alexander. 2017. [Talk]: Accretion and disruption histories of the ordinary chondrite parent bodies. \textit{Meteoritical Society Annual Meeting}, Santa Fe, NM, U.S.A.
-  
-  \item \ghedwards, T. Blackburn, K.V. Smit. 2017. [Poster]: Timescales of crustal cooling of the Superior Craton near Attawapiskat, Ontario, Canada, and implications for extent of Keweenawan plume heating. \textit{American Geophysical Union Fall Meeting}, New Orleans, LA, U.S.A.
-  
-  \item \ghedwards. 2014. [Poster]: Geochemical and stratigraphic analysis of the Linnévatnet sediment record: a provenance study of Late Holocene cirque glacier activity in Linnédalen, Spitsbergen, Svalbard. \textit{44th International Arctic Workshop}, Boulder, CO, U.S.A.
-\end{etaremune}
-\vspace{-12pt}
-
-%-----------------------------------------------------
-% 	ADDITIONAL WORK EXPERIENCE
 %-----------------------------------------------------
 \begin{center}{\rule{2.5in}{0.5pt}}\end{center}  \begin{center}\vspace{-12pt} {\rule{2.5in}{0.5pt}}\end{center}
-	
-\subsection*{\textbf{Additional Work Experience}}
-\begin{itemize}[label={}]
-	\item Server and Bartender --- Trio Restaurant, Fish Creek, WI, U.S.A. --- 2014.
-	\item Wildland Firefighter (Type 2) --- U.S. Forest Service, Winthrop, WA, U.S.A. --- 2015.
-\end{itemize}
+%-----------------------------------------------------
 
-
-\subsection*{\textbf{Non-Academic Interests}} \hspace{5ex}
- Bicycling, cross-country skiing, birdwatching, breadmaking, classical history and literature.
+% EPILOGUE
+\input{sect/epilogue.tex}
 
 %-------------------------------------------
 %-------------------------------------------
