make education and appointments standalone sections as well

--- a/Edwards_CV.tex
+++ b/Edwards_CV.tex
@@ -43,54 +43,26 @@
 \setlength{\parindent}{0pt}
 
 \begin{document}
-
-%-------------------------------------------
-%	NAME, ADDRESS, INFO
-%-------------------------------------------
-
-%Name
+% NAME
 \begin{center}
 \LARGE\textbf{\underline{Graham Harper Edwards}}\\ [.3em]
 \large ---~~he, him~~---
 \end{center}
 
-
-
-% Address and Info
+% ADDRESS, INFO
 Earth Sciences \\
 Dartmouth College \hfill \textit{Email:} Graham.H.Edwards@dartmouth.edu \\
 209 Fairchild Hall \hfill \textit{Phone:} 1~920~559~2279 \\
 Hanover, NH, 03755, U.S.A.	\hfill \textit{Website:} \href{https://grahamedwards.github.io}{grahamedwards.github.io}
 
 \vspace{1em}
-
-%-------------------------------------------
-%	Appointments
 %-------------------------------------------
 
-\section*{CURRENT APPOINTMENT}
-\subsection*{\textbf{Dartmouth College} \hfill 2021 – Present}
-\textit{NSF Astronomy \&\ Astrophysics Postdoctoral Fellow}
-\begin{itemize}
-	\item[] ``Planetesimal formation, giant planet migration, and stellar accretion in our solar system and beyond"
-	\item[] Advisors: Profs. C. Brenhin Keller (Earth Sciences) \&\ Elisabeth R. Newton (Physics \&\ Astronomy)
-\end{itemize}
+% APPOINTMENTS
+\input{sect/appointments.tex}
 
-%-------------------------------------------
-%	EDUCATION
-%-------------------------------------------
-
-\section*{EDUCATION}
-
-\subsection*{\textbf{University of California Santa Cruz} \hfill 2021}
-\textit{PhD}: Earth Sciences\\
-\textit{Dissertation Title}: Applications of the uranium decay systems in deep time and the Quaternary: chronologic insights within planetary interiors and beneath glaciers [\href{https://escholarship.org/uc/item/0vp7r59z}{PDF}]\\
-\textit{Committee}: Profs. Terrence Blackburn (Chair), Slawek Tulaczyk, Myriam Telus.
-
-\subsection*{\textbf{Bowdoin College} \hspace{15pt} Brunswick, ME \hfill 2014}
-\textit{Bachelor of Arts}: Earth and Oceanographic Science with Honors, Classics (minor) \\
-\textit{Summa cum Laude}, $\Phi$BK Society
-
+% EDUCATION
+\input{sect/education.tex}
 
 % PUBLICATIONS
 \input{sect/pubs.tex}
