--- a/sect/abstracts.tex
+++ b/sect/abstracts.tex
@@ -21,9 +21,9 @@ A more comprehensive list of abstracts is available on \href{https://scholar.goo
   
 	\item  \ghedwards, T. Blackburn, G.G. Piccione. 2018. [Talk]: Cooling and disruption of the LL chondrite parent body. \textit{Lunar and Small Bodies Graduate Forum (LunGradCon)}, Mountain View, CA, U.S.A.
 	
-  \item  \ghedwards, T. Blackburn, C.M.O’D. Alexander. 2017. [Talk]: Accretion and disruption histories of the ordinary chondrite parent bodies. \textit{Meteoritical Society Annual Meeting}, Santa Fe, NM, U.S.A.
+  \item  \ghedwards, T. Blackburn, C.M.O’D. Alexander. 2017. [Talk]: Accretion and disruption histories of the ordinary chondrite parent bodies. \textit{80\textsuperscript{th} Annual Meeting of the Meteoritical Society}, Santa Fe, NM, U.S.A.
   
   \item \ghedwards, T. Blackburn, K.V. Smit. 2017. [Poster]: Timescales of crustal cooling of the Superior Craton near Attawapiskat, Ontario, Canada, and implications for extent of Keweenawan plume heating. \textit{American Geophysical Union Fall Meeting}, New Orleans, LA, U.S.A.
   
-  \item \ghedwards. 2014. [Poster]: Geochemical and stratigraphic analysis of the Linnévatnet sediment record: a provenance study of Late Holocene cirque glacier activity in Linnédalen, Spitsbergen, Svalbard. \textit{44th International Arctic Workshop}, Boulder, CO, U.S.A.
+  \item \ghedwards. 2014. [Poster]: Geochemical and stratigraphic analysis of the Linnévatnet sediment record: a provenance study of Late Holocene cirque glacier activity in Linnédalen, Spitsbergen, Svalbard. \textit{44\textsuperscript{th} International Arctic Workshop}, Boulder, CO, U.S.A.
 \end{etaremune}
