--- a/sect/outreach.tex
+++ b/sect/outreach.tex
@@ -41,7 +41,7 @@
 
 \textit{Student Tour Guide}~~(2012 – 2014)
 \begin{itemize}
-	\item Led hour-long museum tours for all age groups of museum exhibits and interactive collections.
+	\item Led museum tours for all age groups of museum exhibits and interactive collections.
 \end{itemize}
 
 \subsection*{\textbf{Museum of the Rockies} \hspace{15pt} Bozeman, MT, U.S.A. \hfill 2015}
