--- a/sect/outreach.tex
+++ b/sect/outreach.tex
@@ -16,7 +16,7 @@
 	Link: \href{https://www.santacruzmuseum.org/category/rockin-pop-up/}{\emph{Rockin' Pop-Up} Archives}.
 \end{itemize}
 
-\subsection*{\textbf{Skype a Scientist} \hfill 2019 – Present}
+\subsection*{\textbf{Skype a Scientist} \hfill 2019~\textrightarrow~}
 \subsubsection*{Volunteer Scientist}
 \begin{itemize}
 	\item Prepare educational content and host video calls with elementary and secondary school classrooms.
