--- a/sect/abstracts.tex
+++ b/sect/abstracts.tex
@@ -5,17 +5,15 @@ A more comprehensive list of abstracts is available on \href{https://scholar.goo
 \end{center}
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
-%\item \ghedwards, C.B. Keller,  E.R. Newton, C. Stewart. 2023. [iPoster]: Constraining the timescales of giant planet migration from the meteorite record. \textit{241\textsuperscript{st} American Astronomical Society Meeting}, Seattle, WA, U.S.A.
-
- \item \ghedwards, C.B. Keller, C. Stewart, E.R. Newton. 2022. [Poster]: A Bayesian framework for exploring the early impact history of the asteroid belt with meteorite thermochronology. \textit{85\textsuperscript{th} Annual Meeting of the Meteoritical Society}, Glasgow, Scotland. 
+  \item \ghedwards, C.B. Keller,  E.R. Newton, C. Stewart. 2023. [iPoster]: Constraining the timescales of giant planet migration from the meteorite record. \textit{241\textsuperscript{st} American Astronomical Society Meeting}, Seattle, WA, U.S.A.
+  
+  \item \ghedwards, C.B. Keller, C. Stewart, E.R. Newton. 2022. [Poster]: A Bayesian framework for exploring the early impact history of the asteroid belt with meteorite thermochronology. \textit{85\textsuperscript{th} Annual Meeting of the Meteoritical Society}, Glasgow, Scotland. 
  
   \item \ghedwards, G. Piccione, M. Gomez. 2022. [Poster]: Comparing in-person and virtual modes of a 4-year museum-based geoscience outreach program. \textit{Earth Educators' Rendezvous 2022}, Minneapolis, MN, U.S.A.
   
   \item \ghedwards, T. Blackburn, G. Piccione, S. Tulaczyk, G.H. Miller, C. Sikes. 2020. [Talk]: Baffin Island subglacial precipitates record subglacial melting beneath the northern Laurentide Ice Sheet concurrent with Heinrich events. \textit{American Geophysical Union Fall Meeting}, New Orleans, LA, U.S.A.
   
   \item C.T. Varah-Sikes, \ghedwards, T. Blackburn. 2020. [Poster]: Thermal histories in Type 7 ordinary chondrites: interpreting residence in parent body using petrologic observation and Pb-Pb phosphate thermochronology. \textit{Geological Society of America Annual Scientific Meeting}, Virtual.
-  
-  \item \ghedwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-series isotopics of silts from Taylor Valley, Antarctica: Applying comminution dating methods on polar desert tills and implications for the timeframe of valley incision. \textit{American Geophysical Union Fall Meeting}, San Francisco, CA, U.S.A.
   
   \item  \ghedwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-Series isotopics constrain timescale of bedrock comminution and glacial incision in Taylor Valley, Antarctica. \textit{Goldschmidt Annual Meeting}, Barcelona, ES.
   
@@ -27,3 +25,10 @@ A more comprehensive list of abstracts is available on \href{https://scholar.goo
   
   \item \ghedwards. 2014. [Poster]: Geochemical and stratigraphic analysis of the Linnévatnet sediment record: a provenance study of Late Holocene cirque glacier activity in Linnédalen, Spitsbergen, Svalbard. \textit{44\textsuperscript{th} International Arctic Workshop}, Boulder, CO, U.S.A.
 \end{etaremune}
+
+
+%%%%%%
+%% Tomb of Abstracts
+%%%%%%
+
+%\item \ghedwards, T. Blackburn, S. Tulaczyk, G.G. Piccione. 2019. [Poster]: U-series isotopics of silts from Taylor Valley, Antarctica: Applying comminution dating methods on polar desert tills and implications for the timeframe of valley incision. \textit{American Geophysical Union Fall Meeting}, San Francisco, CA, U.S.A.
