add Thayer talk and 2022 minpet lectures

--- a/sect/talks.tex
+++ b/sect/talks.tex
@@ -1,9 +1,10 @@
 \section*{INVITED TALKS}
 
 \begin{etaremune} [itemsep=4pt, leftmargin=3ex]
-
+  \item \textbf{Thayer School of Engineering, Dartmouth College} $|$ Ice+Climate Seminar Series, 10 Feb 2023. \\
+  Title:~\textit{A terrestrial record of Heinrich events}
    \item \textbf{Carnegie Institution for Science} $|$
-   Astronomy Seminar Series, 28 October 2022. \\
+   Astronomy Seminar Series, 28 Oct 2022. \\
   Title:~\textit{Reconstructing asteroid assembly from the thermal records of chondrites}
 
    \item \textbf{Massachusetts Institute of Technology} $|$
@@ -11,7 +12,7 @@
   Title:~\textit{The early history of the LL chondrite parent planetesimal}
 
   \item \textbf{Princeton University} $|$ 
-  Environmental Geology and Geochemistry Seminar, 31 March 2022. \\
+  Environmental Geology and Geochemistry Seminar, 31 Mar 2022. \\
   Title:~\textit{Peering beneath the northern Laurentide ice sheet during the last glacial maximum}
   
 \end{etaremune}
