--- a/sect/teaching.tex
+++ b/sect/teaching.tex
@@ -1,5 +1,10 @@
 \section*{TEACHING \&\ MENTORING}
 \subsection*{\textbf{Dartmouth College}}
+\subsubsection*{Guest Lecturer}
+\begin{tabbing} \hspace{10pt} \= \hspace{2.5cm} \=  \kill
+\> Spring 2022 \> Igneous and Metamorphic Petrology
+\end{tabbing}
+
 \subsubsection*{Mentored Undergraduate Researchers}
 \begin{itemize}
 	\item Cameron Stewart (2022)
@@ -8,11 +13,11 @@
 \subsection*{\textbf{University of California Santa Cruz}}
 \subsubsection*{Graduate Teaching Assistant}
 \begin{tabbing} \hspace{10pt} \= \hspace{2.5cm} \=  \kill
-\> Spring 2021 \> \textit{Measuring Earth’s 4.5 Billion-Year History} (radiogenic and stable isotope geochemistry)\\
-\> Fall 2020 \> \textit{Evolution of Earth} (Earth history overview) \\
-\> Fall 2019 \> \textit{Elements of Field Geology}\\
-\> Spring 2018 \>  \textit{Geochemistry of the Solar System}\\
-\> Winter 2018 \> \textit{Geologic Principles} (introductory Earth science)
+	\> Spring 2021 \> \textit{Measuring Earth’s 4.5 Billion-Year History} (radiogenic and stable isotope geochemistry)\\
+	\> Fall 2020 \> \textit{Evolution of Earth} (Earth history overview) \\
+	\> Fall 2019 \> \textit{Elements of Field Geology}\\
+	\> Spring 2018 \>  \textit{Geochemistry of the Solar System}\\
+	\> Winter 2018 \> \textit{Geologic Principles} (introductory Earth science)
 \end{tabbing}
 
 \subsubsection*{Mentored Undergraduate Researchers}
